# aluasm

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: build.yml  lint.yml
examples/: all.aluasm  asm.rs  miner.aluasm  pedersen.aluasm  pow.aluasm  rgb20.aluasm
grammar/: aluasm.pest
src/: analyzer.rs  ast.rs  compiler.rs  grammar.pest  issues.rs  lexer.rs  lib.rs  macros.rs  main.rs  mnemonic.rs  parser.rs
src/model/: ast.rs  issues.rs  mod.rs  module.rs  obj.rs  product.rs
src/pipelines/: analyzer.rs  compiler.rs  linker.rs  mod.rs  parser.rs
src/sym/: mnemonic.rs  mod.rs
test/: code_build.sh
tests/: asm.rs  code_build.sh
