[package]
name = "aluasm"
description = "Alu assembler"
version = "0.1.0"
authors = ["Dr Maxim Orlovsky <orlovsky@pandoracore.com>"]
license = "AGPL"
edition = "2018"
repository = "https://github.com/pandoracore/alure"
homepage = "https://aluvm.org"
keywords = ["virtual-machine", "emulator", "functional", "risc", "edge-computing"]
categories = ["no-std", "embedded", "compilers", "cryptography", "emulators"]
readme = "README.md"
exclude = [".github"]

[[bin]]
name = "aluasm"

[[bin]]
name = "alulink"

[dependencies]
amplify = "3.7"
aluvm = { version = "0.4", git = "https://github.com/internet2-org/rust-aluvm", features = ["all"] }
# alure = { version = "0.1", path = "../alure" }
rustc_apfloat = "0.1.3"
pest = "2.1"
pest_derive = "2.1"
clap = "3.0.0-beta.2"
