[package]
name = "aluasm"
description = "Alu assembler"
version = "0.1.0"
authors = ["Dr Maxim Orlovsky <orlovsky@pandoracore.com>"]
license = "AGPL"
edition = "2018"
repository = "https://github.com/pandoracore/alure"
homepage = "https://aluvm.org"
keywords = ["virtual-machine", "emulator", "functional", "risc", "edge-computing"]
categories = ["no-std", "embedded", "compilers", "cryptography", "emulators"]
readme = "README.md"
exclude = [".github"]

[[bin]]
name = "aluasm"

[[bin]]
name = "alink"

[dependencies]
amplify = "4.0.0"
aluvm = { version = "0.10.2", features = ["std", "secp256k1"] }
baid58 = "0.3.2"
pest = "2.1"
pest_derive = "2.1"
clap = { version = "3.1.6", features = ["derive"] }

[patch.crates-io]
aluvm = { git = "https://github.com/aluvm/rust-aluvm" }
